# Brusher

./: .gitignore  CMakeLists.txt  README.md  build.sh  claude_prompt.txt  resources.qrc
.github/workflows/: build.yml
AppDir/: .DirIcon  AppRun  brusher.desktop
AppDir/usr/lib/: libQt6OpenGL.so.6  libQt6OpenGLWidgets.so.6  libcap.so.2  libgcrypt.so.20  libgomp.so.1  liblzma.so.5  libpng16.so.16  libsystemd.so.0
AppDir/usr/share/applications/: brusher.desktop
packaging/: postinst
src/: main.cpp
src/canvas/: CanvasWidget.cpp  CanvasWidget.h
src/filters/: ImageFilters.cpp  ImageFilters.h
src/history/: DocumentSnapshot.cpp  DocumentSnapshot.h  HistoryManager.cpp  HistoryManager.h
src/io/: ProjectSerializer.cpp  ProjectSerializer.h
src/models/: Layer.h
src/styles/: brusher_dark.qss
src/tools/: EllipseSelectTool.cpp  EllipseSelectTool.h  EraserTool.cpp  EraserTool.h  EyedropperTool.cpp  EyedropperTool.h  FillTool.cpp  FillTool.h  LassoSelectTool.cpp  LassoSelectTool.h  LineTool.cpp  LineTool.h  MoveTool.cpp  MoveTool.h  PenTool.cpp  PenTool.h  RectSelectTool.cpp  RectSelectTool.h  SelectionTool.cpp  SelectionTool.h  TextTool.cpp  TextTool.h  Tool.h  ZoomTool.cpp  ZoomTool.h
src/ui/: BrushSettingsPopup.cpp  BrushSettingsPopup.h  BrusherTheme.cpp  BrusherTheme.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/ui/dialogs/: CanvasSizeDialog.cpp  CanvasSizeDialog.h  NewProjectDialog.cpp  NewProjectDialog.h
src/ui/panels/: ColorPanel.cpp  ColorPanel.h  LayerPanel.cpp  LayerPanel.h  ToolOptionsBar.cpp  ToolOptionsBar.h  ToolPanel.cpp  ToolPanel.h
